--- a/services.html
+++ b/services.html
@@ -53,9 +53,11 @@
       <div class="cards-container">
         <div class="card">
           <div class="carousel">[Carousel]</div>
-          <h3>Nom</h3>
-          <p>Description</p>
-          <p>Date d'expiration / Contact</p>
+          <h3>Ensemble Nike</h3>
+          <p>📢 #Don – À Donner <br>📍 Rennes – Quartier Beauregard (pour la récupération de préférence) <br>
+            Objet:  Ensemble Nike Taille S <br> ✨ État :  Très bon état
+          </p>
+          <p>📅 À récupérer avant mardi / 📞 Contact : +33 7 58 65 35 25</p>
         </div>
     
         <div class="card">
@@ -164,6 +166,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
