--- a/services.html
+++ b/services.html
@@ -52,7 +52,7 @@
     
       <div class="cards-container">
         <div class="card">
-          <div class="carousel">[Carousel]</div>
+          <img class="carousel" src="ensemble-nike.jpeg" alt="Ensemble Nike">
           <h3>Ensemble Nike</h3>
           <p>📢 #Don – À Donner <br>📍 Rennes – Quartier Beauregard (pour la récupération de préférence) <br>
             Objet:  Ensemble Nike Taille S <br> ✨ État :  Très bon état
@@ -166,6 +166,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
