--- a/services.html
+++ b/services.html
@@ -54,7 +54,7 @@
         <div class="card">
           <img class="carousel" src="ensemble-nike.jpeg" alt="Ensemble Nike">
           <h3>Ensemble Nike</h3>
-          <p>📢 #Don – À Donner <br>📍 Rennes – Quartier Beauregard (pour la récupération de préférence) <br>
+          <p>📍 Rennes – Quartier Beauregard (pour la récupération de préférence) <br>
             Objet:  Ensemble Nike Taille S <br> ✨ État :  Très bon état
           </p>
           <p>📅 À récupérer avant mardi / 📞 Contact : +33 7 58 65 35 25</p>
@@ -166,6 +166,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
