--- a/services.html
+++ b/services.html
@@ -51,6 +51,7 @@
       </div>
     
       <div class="don-carousel-wrapper">
+        <button class="don-arrow left" id="leftArrow">&#10094;</button>
         <div class="don-carousel" id="donCarousel">
           <div class="don-card">
             <img class="carousel" src="ensemble-nike.jpeg" alt="Ensemble Nike">
@@ -85,6 +86,7 @@
             <p>📅 À récupérer immédiatement / 📞 Contact : +33 7 44 20 86 97</p>
           </div>
         </div>
+        <button class="don-arrow right" id="rightArrow">&#10095;</button>
         <div class="fade-left"></div>
         <div class="fade-right"></div>
       </div>
@@ -180,6 +182,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
