--- a/apropos.html
+++ b/apropos.html
@@ -20,9 +20,9 @@
       <li class="menu-header">
         <span>Le Coin Des Étudiants</span>
       </li>
-      <li><a href="index.html">Accueil</a></li>
+      <li><a href="index.html" class="active">Accueil</a></li>
       <li><a href="services.html">Services</a></li>
-      <li><a href="apropos.html" class="active">À propos</a></li>
+      <li><a href="apropos.html">À propos</a></li>
       <li><a href="partenariats.html">Partenariats</a></li>
       <li><a href="contact.html">Contact</a></li>
       <button class="menu-cta">Télécharge l'application</button>
@@ -37,46 +37,48 @@
   </nav>
   <div id="menu-overlay" class="menu-overlay" aria-hidden="true"></div>
   <section class="apropos-header">
-    <h2>À propos de nous</h2>
+  <h2>À propos de nous</h2>
 
-    <div class="apropos-section">
-      <div class="apropos-image">
-        <img src="equipe.jpg" alt="Notre équipe" />
-      </div>
-
-      <div class="apropos-text">
-       <p>
-  🧩 <strong>L’histoire de Coin des Étudiants</strong><br><br>
-
-  Être étudiant en France, c’est souvent devoir relever de nombreux défis : trouver un logement, s’équiper à petit prix, accéder à des services abordables ou simplement bénéficier d’un peu de solidarité. Nous avons tous connu ces moments où chaque euro compte, où il faut improviser pour réussir à s’en sortir.<br><br>
-
-  En observant notre quotidien, nous avons remarqué que tous les services utiles aux étudiants étaient dispersés : ici une plateforme de dons, là une autre pour la colocation, ailleurs un site pour les bons plans… Aucune ne regroupait tous ces besoins essentiels au même endroit, spécifiquement pour les étudiants.<br><br>
-
-  Les plateformes généralistes comme Leboncoin proposent des solutions, mais elles restent souvent difficiles d’accès pour les budgets étudiants : prix trop élevés, offres inadaptées, risques d’arnaques ou encore frais d’agence abusifs pour la recherche de logement.<br><br>
-
-  C’est pour répondre à ces problèmes qu’est né <strong>Coin des Étudiants</strong>, une plateforme tout-en-un, pensée par des étudiants et pour les étudiants, qui rassemble :<br><br>
-
-  • des offres de logement et de colocation sans frais d’agence,<br>
-  • des dons d’objets (meubles, électroménager, vêtements…),<br>
-  • un espace d’achat et de vente entre étudiants,<br>
-  • des bons plans pour améliorer le quotidien étudiant.<br><br>
-
-  Notre ambition est simple : rendre la vie étudiante plus accessible, plus humaine et plus connectée.<br><br>
-
-  <strong>Coin des Étudiants</strong>, ce n’est pas seulement un projet numérique : c’est une communauté d’entraide, où chacun peut donner, recevoir, partager et réussir.
-</p>
-
-      </div>
+  <!-- Première ligne : image + texte à droite -->
+  <div class="apropos-row">
+    <div class="apropos-image">
+      <img src="equipe.jpg" alt="Notre équipe" />
     </div>
-
-    <div class="apropos-video">
-      <iframe
-        src="https://www.youtube.com/embed/VIDEO_ID"
-        title="Présentation vidéo"
-        allowfullscreen
-      ></iframe>
+    <div class="text-part1">
+      <p>
+        🧩 <strong>L’histoire de Coin des Étudiants</strong><br>
+        Être étudiant en France, c’est souvent devoir faire face à de nombreux défis : trouver un logement, s’équiper à petit prix, accéder à des services abordables ou simplement bénéficier d’un peu de solidarité. Nous avons tous connu ces moments où chaque euro compte, où il faut improviser pour s’en sortir.
+        En observant notre quotidien, nous avons remarqué que tous les services utiles aux étudiants étaient dispersés : ici une plateforme de dons, là une pour la colocation, ailleurs une autre pour les bons plans. Aucune ne rassemblait tous ces besoins essentiels au même endroit, spécifiquement pour les étudiants.
+        Les plateformes généralistes comme Leboncoin offrent des solutions, mais elles restent souvent inaccessibles aux budgets étudiants : prix trop élevés, offres inadaptées, risques d’arnaques ou frais d’agence abusifs pour les logements. Nous voulions créer une alternative étudiante, simple, fiable et solidaire.
+      </p>
     </div>
-  </section>
+  </div>
+
+  <!-- Deuxième ligne : texte à gauche + vidéo YouTube à droite -->
+<div class="apropos-row">
+  <div class="text-part2">
+    <p>
+      C’est ainsi qu’est né <strong>Coin des Étudiants</strong>, une plateforme tout-en-un, pensée par et pour les étudiants. Elle rassemble ce dont chacun a réellement besoin pour commencer sa vie étudiante plus sereinement.
+    </p>
+    <ul>
+      <li>Des offres de logement et de colocation sans frais d’agence</li>
+      <li>Des dons d’objets (meubles, électroménager, vêtements…)</li>
+      <li>Un espace d’achat et de vente entre étudiants</li>
+      <li>Des bons plans pour améliorer le quotidien étudiant</li>
+    </ul>
+    <p>
+      Notre ambition est simple : rendre la vie étudiante plus accessible, plus humaine et plus connectée.
+      <br>
+      <strong>Coin des Étudiants</strong>, c’est bien plus qu’une plateforme : c’est une communauté où chacun peut donner, recevoir, partager et réussir.
+    </p>
+  </div>
+
+  <div class="apropos-video">
+    <iframe src="https://www.youtube.com/embed/VIDEO_ID" title="Présentation vidéo" allowfullscreen></iframe>
+  </div>
+</div>
+</section>
+
 
   <section class="equipe">
     <h2>Notre équipe</h2>
@@ -106,17 +108,18 @@
   </section>
 
   <section class="rejoindre">
-    <h2>Vous souhaitez nous rejoindre ?</h2>
+  <h2>Vous souhaitez nous rejoindre ?</h2>
 
-    <div class="cta-buttons">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxFWhEgEM0nuMQ1LxaQ293BqxbW6cxz4bv4Nd62cu1i846mQ/viewform?usp=header" class="cta">Formulaire partenariat</a>
-      <a href="https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03" class="cta">Canal WhatsApp</a>
-    </div>
+  <div class="cta-buttons">
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxFWhEgEM0nuMQ1LxaQ293BqxbW6cxz4bv4Nd62cu1i846mQ/viewform?usp=header" class="cta">Formulaire partenariat</a>
+    <a href="https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03" class="cta">Canal WhatsApp</a>
+  </div>
 
-    <h3>Ou alors...</h3>
+  <h3 class="ou-alors">Ou alors...</h3>
 
-    <a href="#" class="cta-big">Télécharger l'application</a>
-  </section>
+  <a href="#" class="cta-big">Télécharger l'application</a>
+</section>
+
 
   <footer>
     <div class="footer-container">
@@ -154,4 +157,3 @@
 
 </body>
 </html>
-
