--- a/services.html
+++ b/services.html
@@ -82,8 +82,24 @@
             <img class="carousel" src="ensemble-noir-love.jpeg" alt="Ensemble LOVE">
             <h3>Ensemble LOVE</h3>
             <p>📍 Paris 4e <br> 👕 Objet : Ensemble noir LOVE (haut + short) <br>
-            📏 Taille : M</p>
+            📏 Taille : M <br> ✨ État : Très bon état</p>
             <p>📅 À récupérer immédiatement / 📞 Contact : +33 7 44 20 86 97</p>
+          </div>
+
+          <div class="don-card">
+            <img class="carousel" src="pantalon-carreaux.jpeg" alt="Ensemble LOVE">
+            <h3>Pantalon large à carreaux</h3>
+            <p>📍 Paris – Saint-Lazare<br> 👖 Objet : Pantalon large multicolore à carreaux<br>
+            📏 Taille : S (bas assez large) <br> ✨ État : Très bon état</p>
+            <p>📅 À récupérer immédiatement / 📞 Contact : +33 6 64 95 85 14</p>
+          </div>
+
+          <div class="don-card">
+            <img class="carousel" src="ensemble-beige.jpeg" alt="Ensemble Beige">
+            <h3>Ensemble Beige</h3>
+            <p>📍 Paris 4e <br> 👕 Objet : Ensemble beige <br>
+            📏 Taille : XS</p>
+            <p>📅 À récupérer immédiatement / 📞 Contact : +33 6 64 95 85 14</p>
           </div>
         </div>
         <button class="don-arrow right" id="rightArrow">&#10095;</button>
@@ -182,6 +198,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
