--- a/partenariats.html
+++ b/partenariats.html
@@ -56,7 +56,7 @@
         <div class="carre">
             <img src="https://upload.wikimedia.org/wikipedia/fr/5/59/Union_%C3%A9tudiante_%28logo_2023%29.png" alt="Union des étudiants">
         </div>
-        <a href="https://union-etudiante.fr/" class="carre-btn">Union Etudiant</a>
+        <a href="https://union-etudiante.fr/" class="carre-btn">Union Etudiante</a>
     </div>
 
     <div class="carre-item">
@@ -117,6 +117,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
