--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,8 @@
       <section class="contact-info">
         <h2>Infos</h2>
         <div class="map-placeholder">
-          [Emplacement de la Carte et de la Localisation]
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.808924165034!2d2.460787012469094!3d48.86185390034259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e612ae6a4cd20d%3A0xfe5502b116430be!2sIUT%20De%20Montreuil!5e0!3m2!1sfr!2sfr!4v1764686398557!5m2!1sfr!2sfr" 
+          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <p>123 Rue de la Solidarité, 75000 Paris</p>
       </section>
@@ -106,3 +107,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
