--- a/services.html
+++ b/services.html
@@ -38,8 +38,19 @@
   </nav>
   <div id="menu-overlay" class="menu-overlay" aria-hidden="true"></div>
 
-  <div class="don-carousel-wrapper">
+  <section class="don-section">
+    <h2>Dons Étudiants</h2>
+  
+    <div class="don-search-filter">
+      <input type="text" placeholder="Rechercher..." class="don-search">
+      <select class="don-filter">
+        <option value="">Filtrer</option>
+      </select>
+    </div>
+  
+    <div class="don-carousel-wrapper">
       <button class="don-arrow left" id="leftArrow">&#10094;</button>
+  
       <div class="don-carousel" id="donCarousel">
         <div class="don-card"
           data-title="Ensemble Nike"
@@ -205,6 +216,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
