--- a/services.html
+++ b/services.html
@@ -41,13 +41,13 @@
   <section class="don-section">
     <h2>Dons Étudiants</h2>
   
-    <div class="don-search-filter">
-      <input type="text" placeholder="Rechercher..." class="don-search">
-      <select class="don-filter">
+    <div class="search-filter">
+      <input type="text" placeholder="Rechercher..." class="search-bar">
+      <select class="filter-select">
         <option value="">Filtrer</option>
       </select>
     </div>
-  
+    
     <div class="don-carousel-wrapper">
       <button class="don-arrow left" id="leftArrow">&#10094;</button>
   
@@ -227,6 +227,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
