--- a/services.html
+++ b/services.html
@@ -59,7 +59,7 @@
           data-contact="À récupérer avant mardi / Contact : +33 7 58 65 35 25"
           data-image="ensemble-nike.jpeg">
     
-          <img src="ensemble-nike.jpeg" alt="Ensemble Nike" class="carousel-img">
+          <img src="ensemble-nike.jpeg" alt="Ensemble Nike" class="don-img">
           <h3>Ensemble Nike</h3>
           <p class="localisation">📍 Rennes – Quartier Beauregard</p>
         </div>
@@ -227,6 +227,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
