--- a/services.html
+++ b/services.html
@@ -129,6 +129,7 @@
       <div class="fade-right"></div>
     </div>
 
+    <div class="separator-line"></div>
     
     <section class="service-section">
       <h2>Logements & Colocations</h2>
@@ -164,6 +165,8 @@
         </div>
       </div>
     </section>
+
+    <div class="separator-line"></div>
     
     <section class="service-section sales-purchases">
       <h2>Ventes et Achats</h2>
@@ -227,3 +230,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
