--- a/apropos.html
+++ b/apropos.html
@@ -85,21 +85,21 @@
 
     <div class="equipe-grid">
       <div class="membre">
-        <img src="Fondateur.jpg" alt="Membre équipe" />
+        <img src="fondateur.jpg" alt="Ibra - Fondateur" />
         <h3>Cheikh ibra Ndiaye</h3>
         <p>Fondateur</p>
         <a href="#">cheikhibrandiaye75@email.com</a>
       </div>
 
       <div class="membre">
-        <img src="meuf.jpg" alt="Membre équipe" />
+        <img src="directrice.jpg" alt="Bassine - Directrice Générale" />
         <h3>Niang Bassine</h3>
         <p>Directrice Générale & Responsable communication</p>
         <a href="#">enissab565@gmail.com</a>
       </div>
 
       <div class="membre">
-        <img src="mec3.jpg" alt="Membre équipe" />
+        <img src="responsable.jpg" alt="Dauda - Chef de produit" />
         <h3>Niang Dauda</h3>
         <p>Chef de produit / Responsable innovation</p>
         <a href="#">niangdauda7@gmail.com</a>
@@ -157,3 +157,4 @@
 
 </body>
 </html>
+
