--- a/apropos.html
+++ b/apropos.html
@@ -88,21 +88,21 @@
         <img src="fondateur.jpg" alt="Ibra - Fondateur" />
         <h3>Cheikh ibra Ndiaye</h3>
         <p>Fondateur</p>
-        <a href="#">cheikhibrandiaye75@email.com</a>
+        <a href="mailto:cheikhibrandiaye75@email.com">cheikhibrandiaye75@email.com</a>
       </div>
 
       <div class="membre">
         <img src="directrice.jpg" alt="Bassine - Directrice Générale" />
         <h3>Niang Bassine</h3>
         <p>Directrice Générale & Responsable communication</p>
-        <a href="#">enissab565@gmail.com</a>
+        <a href="mailto:enissab565@gmail.com">enissab565@gmail.com</a>
       </div>
 
       <div class="membre">
         <img src="responsable.jpg" alt="Dauda - Chef de produit" />
         <h3>Niang Dauda</h3>
         <p>Chef de produit / Responsable innovation</p>
-        <a href="#">niangdauda7@gmail.com</a>
+        <a href="mailto:niangdauda7@gmail.com">niangdauda7@gmail.com</a>
       </div>
     </div>
   </section>
@@ -157,4 +157,5 @@
 
 </body>
 </html>
+
 
