--- a/apropos.html
+++ b/apropos.html
@@ -132,8 +132,8 @@
       <div class="footer-section">
         <h3>Navigation</h3>
         <ul>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="apropos.html">À propos</a></li>
           <li><a href="partenariats.html">Partenariats</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -157,5 +157,6 @@
 
 </body>
 </html>
+
 
 
