--- a/contact.html
+++ b/contact.html
@@ -82,10 +82,10 @@
       <div class="footer-section">
         <h3>Navigation</h3>
         <ul>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="apropos.html">À propos</a></li>
           <li><a href="partenariats.html">Partenariats</a></li>
-          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
   
@@ -107,4 +107,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
