--- a/partenariats.html
+++ b/partenariats.html
@@ -92,9 +92,9 @@
       <div class="footer-section">
         <h3>Navigation</h3>
         <ul>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="apropos.html">À propos</a></li>
-          <li><a href="partenariats.html">Partenariats</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
@@ -117,6 +117,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
