--- a/services.html
+++ b/services.html
@@ -194,7 +194,7 @@
       <div class="footer-section">
         <h3>Navigation</h3>
         <ul>
-          <li><a href="services.html">Services</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="apropos.html">À propos</a></li>
           <li><a href="partenariats.html">Partenariats</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -230,4 +230,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
