--- a/apropos.html
+++ b/apropos.html
@@ -36,8 +36,10 @@
     </div>
   </nav>
   <div id="menu-overlay" class="menu-overlay" aria-hidden="true"></div>
-  <section class="apropos-header">
-  <h2>À propos de nous</h2>
+  <div class="page-title">
+    <h1>A propos de nous</h1>
+    <div class="title-underline"></div>
+  </div>
 
   <!-- Première ligne : image + texte à droite -->
   <div class="apropos-row">
@@ -157,6 +159,7 @@
 
 </body>
 </html>
+
 
 
 
