--- a/apropos.html
+++ b/apropos.html
@@ -41,45 +41,46 @@
     <div class="title-underline"></div>
   </div>
 
-  <!-- Première ligne : image + texte à droite -->
-  <div class="apropos-row">
-    <div class="apropos-image">
-      <img src="equipe.jpg" alt="Notre équipe" />
+  <div class="apropos-header">
+    <!-- Première ligne : image + texte à droite -->
+    <div class="apropos-row">
+      <div class="apropos-image">
+        <img src="equipe.jpg" alt="Notre équipe" />
+      </div>
+      <div class="text-part1">
+        <p>
+          🧩 <strong>L’histoire de Coin des Étudiants</strong><br>
+          Être étudiant en France, c’est souvent devoir faire face à de nombreux défis : trouver un logement, s’équiper à petit prix, accéder à des services abordables ou simplement bénéficier d’un peu de solidarité. Nous avons tous connu ces moments où chaque euro compte, où il faut improviser pour s’en sortir.
+          En observant notre quotidien, nous avons remarqué que tous les services utiles aux étudiants étaient dispersés : ici une plateforme de dons, là une pour la colocation, ailleurs une autre pour les bons plans. Aucune ne rassemblait tous ces besoins essentiels au même endroit, spécifiquement pour les étudiants.
+          Les plateformes généralistes comme Leboncoin offrent des solutions, mais elles restent souvent inaccessibles aux budgets étudiants : prix trop élevés, offres inadaptées, risques d’arnaques ou frais d’agence abusifs pour les logements. Nous voulions créer une alternative étudiante, simple, fiable et solidaire.
+        </p>
+      </div>
     </div>
-    <div class="text-part1">
+  
+    <!-- Deuxième ligne : texte à gauche + vidéo YouTube à droite -->
+  <div class="apropos-row">
+    <div class="text-part2">
       <p>
-        🧩 <strong>L’histoire de Coin des Étudiants</strong><br>
-        Être étudiant en France, c’est souvent devoir faire face à de nombreux défis : trouver un logement, s’équiper à petit prix, accéder à des services abordables ou simplement bénéficier d’un peu de solidarité. Nous avons tous connu ces moments où chaque euro compte, où il faut improviser pour s’en sortir.
-        En observant notre quotidien, nous avons remarqué que tous les services utiles aux étudiants étaient dispersés : ici une plateforme de dons, là une pour la colocation, ailleurs une autre pour les bons plans. Aucune ne rassemblait tous ces besoins essentiels au même endroit, spécifiquement pour les étudiants.
-        Les plateformes généralistes comme Leboncoin offrent des solutions, mais elles restent souvent inaccessibles aux budgets étudiants : prix trop élevés, offres inadaptées, risques d’arnaques ou frais d’agence abusifs pour les logements. Nous voulions créer une alternative étudiante, simple, fiable et solidaire.
+        C’est ainsi qu’est né <strong>Coin des Étudiants</strong>, une plateforme tout-en-un, pensée par et pour les étudiants. Elle rassemble ce dont chacun a réellement besoin pour commencer sa vie étudiante plus sereinement.
+      </p>
+      <ul>
+        <li>Des offres de logement et de colocation sans frais d’agence</li>
+        <li>Des dons d’objets (meubles, électroménager, vêtements…)</li>
+        <li>Un espace d’achat et de vente entre étudiants</li>
+        <li>Des bons plans pour améliorer le quotidien étudiant</li>
+      </ul>
+      <p>
+        Notre ambition est simple : rendre la vie étudiante plus accessible, plus humaine et plus connectée.
+        <br>
+        <strong>Coin des Étudiants</strong>, c’est bien plus qu’une plateforme : c’est une communauté où chacun peut donner, recevoir, partager et réussir.
       </p>
     </div>
-  </div>
 
-  <!-- Deuxième ligne : texte à gauche + vidéo YouTube à droite -->
-<div class="apropos-row">
-  <div class="text-part2">
-    <p>
-      C’est ainsi qu’est né <strong>Coin des Étudiants</strong>, une plateforme tout-en-un, pensée par et pour les étudiants. Elle rassemble ce dont chacun a réellement besoin pour commencer sa vie étudiante plus sereinement.
-    </p>
-    <ul>
-      <li>Des offres de logement et de colocation sans frais d’agence</li>
-      <li>Des dons d’objets (meubles, électroménager, vêtements…)</li>
-      <li>Un espace d’achat et de vente entre étudiants</li>
-      <li>Des bons plans pour améliorer le quotidien étudiant</li>
-    </ul>
-    <p>
-      Notre ambition est simple : rendre la vie étudiante plus accessible, plus humaine et plus connectée.
-      <br>
-      <strong>Coin des Étudiants</strong>, c’est bien plus qu’une plateforme : c’est une communauté où chacun peut donner, recevoir, partager et réussir.
-    </p>
-  </div>
-
-  <div class="apropos-video">
-    <iframe src="https://www.youtube.com/embed/VIDEO_ID" title="Présentation vidéo" allowfullscreen></iframe>
+    <div class="apropos-video">
+      <iframe src="https://www.youtube.com/embed/VIDEO_ID" title="Présentation vidéo" allowfullscreen></iframe>
+    </div>
   </div>
 </div>
-</section>
 
 
   <section class="equipe">
@@ -159,6 +160,7 @@
 
 </body>
 </html>
+
 
 
 
