--- a/apropos.html
+++ b/apropos.html
@@ -80,8 +80,8 @@
       <iframe src="https://www.youtube.com/embed/VIDEO_ID" title="Présentation vidéo" allowfullscreen></iframe>
     </div>
   </div>
-</div>
 
+  <div class="separator-line"></div>
 
   <section class="equipe">
     <h2>Notre équipe</h2>
@@ -110,6 +110,8 @@
     </div>
   </section>
 
+  <div class="separator-line"></div>
+    
   <section class="rejoindre">
   <h2>Vous souhaitez nous rejoindre ?</h2>
 
@@ -160,6 +162,7 @@
 
 </body>
 </html>
+
 
 
 
