--- a/apropos.html
+++ b/apropos.html
@@ -20,9 +20,9 @@
       <li class="menu-header">
         <span>Le Coin Des Étudiants</span>
       </li>
-      <li><a href="index.html" class="active">Accueil</a></li>
+      <li><a href="index.html">Accueil</a></li>
       <li><a href="services.html">Services</a></li>
-      <li><a href="apropos.html">À propos</a></li>
+      <li><a href="apropos.html" class="active">À propos</a></li>
       <li><a href="partenariats.html">Partenariats</a></li>
       <li><a href="contact.html">Contact</a></li>
       <button class="menu-cta">Télécharge l'application</button>
@@ -160,3 +160,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
