--- a/apropos.html
+++ b/apropos.html
@@ -124,16 +124,16 @@
 </section>
 
 
-  <footer>
-    <div class="footer-container">
-  
-      <div class="footer-section">
+  <footer class="footer-modern">
+    <div class="footer-grid">
+      <div class="footer-brand">
+        <img src="logo.png" alt="Logo">
         <h3>Le Coin Des Étudiants</h3>
         <p>La plateforme solidaire dédiée aux étudiants en France.</p>
       </div>
   
-      <div class="footer-section">
-        <h3>Navigation</h3>
+      <div class="footer-links">
+        <h4>Navigation</h4>
         <ul>
           <li><a href="index.html">Accueil</a></li>
           <li><a href="services.html">Services</a></li>
@@ -142,22 +142,26 @@
         </ul>
       </div>
   
-      <div class="footer-section">
-        <h3>Réseaux sociaux</h3>
+      <div class="footer-links">
+        <h4>Réseaux sociaux</h4>
         <ul>
           <li><a href="https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03">Canal WhatsApp</a></li>
         </ul>
       </div>
   
-      <div class="footer-section">
-        <h3>Contact</h3>
+      <div class="footer-contact">
+        <h4>Contact</h4>
         <p>Email : contact@coindesetudiants.fr</p>
-        <p>© 2025 Le Coin Des Étudiants — Tous droits réservés</p>
       </div>
+    </div>
   
+    <div class="footer-bottom">
+      © 2025 Le Coin Des Étudiants — Tous droits réservés
     </div>
   </footer>
+
 <script src="script.js"></script>
 </body>
 </html>
+
 
