--- a/index.html
+++ b/index.html
@@ -193,12 +193,13 @@
       <div class="footer-section">
         <h3>Contact</h3>
         <p>Email : contact@coindesetudiants.fr</p>
-        <p>© 2025 Le Coin Des Étudiants — Tous droits réservés</p>
       </div>
-  
+    </div>
+    
+    <div class="footer-bottom">
+        © 2025 Le Coin Des Étudiants — Tous droits réservés
     </div>
   </footer>
-
 <script src="script.js"></script>
 </body>
 </html>
