--- a/services.html
+++ b/services.html
@@ -182,23 +182,12 @@
       </div>
     </section>
   </main>
-
-  <footer>
+ <footer>
     <div class="footer-container">
   
       <div class="footer-section">
         <h3>Le Coin Des Étudiants</h3>
         <p>La plateforme solidaire dédiée aux étudiants en France.</p>
-      </div>
-  
-      <div class="footer-section">
-        <h3>Navigation</h3>
-        <ul>
-          <li><a href="index.html">Accueil</a></li>
-          <li><a href="apropos.html">À propos</a></li>
-          <li><a href="partenariats.html">Partenariats</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
       </div>
   
       <div class="footer-section">
@@ -211,9 +200,11 @@
       <div class="footer-section">
         <h3>Contact</h3>
         <p>Email : contact@coindesetudiants.fr</p>
-        <p>© 2025 Le Coin Des Étudiants — Tous droits réservés</p>
       </div>
-  
+    </div>
+    
+    <div class="footer-bottom">
+        © 2025 Le Coin Des Étudiants — Tous droits réservés
     </div>
   </footer>
     
@@ -230,6 +221,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
