--- a/partenariats.html
+++ b/partenariats.html
@@ -81,22 +81,12 @@
     <p>Le Coin Des Étudiants connecte les étudiants aux meilleures opportunités pour réussir et s’épanouir. En rejoignant notre projet, vous contribuez à un impact réel sur leur avenir tout en valorisant votre engagement. Ensemble, construisons des solutions innovantes et durables pour la jeunesse.</p>
   </div>
 
-  <footer>
+   <footer>
     <div class="footer-container">
   
       <div class="footer-section">
         <h3>Le Coin Des Étudiants</h3>
         <p>La plateforme solidaire dédiée aux étudiants en France.</p>
-      </div>
-  
-      <div class="footer-section">
-        <h3>Navigation</h3>
-        <ul>
-          <li><a href="index.html">Accueil</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="apropos.html">À propos</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
       </div>
   
       <div class="footer-section">
@@ -109,14 +99,17 @@
       <div class="footer-section">
         <h3>Contact</h3>
         <p>Email : contact@coindesetudiants.fr</p>
-        <p>© 2025 Le Coin Des Étudiants — Tous droits réservés</p>
       </div>
-  
+    </div>
+    
+    <div class="footer-bottom">
+        © 2025 Le Coin Des Étudiants — Tous droits réservés
     </div>
   </footer>
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
