--- a/contact.html
+++ b/contact.html
@@ -71,22 +71,12 @@
       </section>
     </div>
   </main>
-  <footer>
+   <footer>
     <div class="footer-container">
   
       <div class="footer-section">
         <h3>Le Coin Des Étudiants</h3>
         <p>La plateforme solidaire dédiée aux étudiants en France.</p>
-      </div>
-  
-      <div class="footer-section">
-        <h3>Navigation</h3>
-        <ul>
-          <li><a href="index.html">Accueil</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="apropos.html">À propos</a></li>
-          <li><a href="partenariats.html">Partenariats</a></li>
-        </ul>
       </div>
   
       <div class="footer-section">
@@ -99,13 +89,16 @@
       <div class="footer-section">
         <h3>Contact</h3>
         <p>Email : contact@coindesetudiants.fr</p>
-        <p>© 2025 Le Coin Des Étudiants — Tous droits réservés</p>
       </div>
-  
+    </div>
+    
+    <div class="footer-bottom">
+        © 2025 Le Coin Des Étudiants — Tous droits réservés
     </div>
   </footer>
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
