--- a/apropos.html
+++ b/apropos.html
@@ -111,57 +111,44 @@
   <div class="separator-line"></div>
     
   <section class="rejoindre">
-  <h2>Vous souhaitez nous rejoindre ?</h2>
-
-  <div class="cta-buttons">
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxFWhEgEM0nuMQ1LxaQ293BqxbW6cxz4bv4Nd62cu1i846mQ/viewform?usp=header" class="cta">Formulaire partenariat</a>
-    <a href="https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03" class="cta">Canal WhatsApp</a>
-  </div>
-
-  <h3 class="ou-alors">Ou alors...</h3>
-
-  <a href="#" class="cta-big">Télécharger l'application</a>
-</section>
-
-
-  <footer class="footer-modern">
-    <div class="footer-grid">
-      <div class="footer-brand">
-        <img src="logo.png" alt="Logo">
+    <h2>Vous souhaitez nous rejoindre ?</h2>
+  
+    <div class="cta-buttons">
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxFWhEgEM0nuMQ1LxaQ293BqxbW6cxz4bv4Nd62cu1i846mQ/viewform?usp=header" class="cta">Formulaire partenariat</a>
+      <a href="https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03" class="cta">Canal WhatsApp</a>
+    </div>
+  
+    <h3 class="ou-alors">Ou alors...</h3>
+  
+    <a href="#" class="cta-big">Télécharger l'application</a>
+  </section>
+  <footer>
+    <div class="footer-container">
+      <div class="footer-section">
         <h3>Le Coin Des Étudiants</h3>
         <p>La plateforme solidaire dédiée aux étudiants en France.</p>
       </div>
   
-      <div class="footer-links">
-        <h4>Navigation</h4>
-        <ul>
-          <li><a href="index.html">Accueil</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="partenariats.html">Partenariats</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
-  
-      <div class="footer-links">
-        <h4>Réseaux sociaux</h4>
+      <div class="footer-section">
+        <h3>Réseaux sociaux</h3>
         <ul>
           <li><a href="https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03">Canal WhatsApp</a></li>
         </ul>
       </div>
   
-      <div class="footer-contact">
-        <h4>Contact</h4>
+      <div class="footer-section">
+        <h3>Contact</h3>
         <p>Email : contact@coindesetudiants.fr</p>
       </div>
     </div>
-  
+    
     <div class="footer-bottom">
-      © 2025 Le Coin Des Étudiants — Tous droits réservés
+        © 2025 Le Coin Des Étudiants — Tous droits réservés
     </div>
   </footer>
-
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
