--- a/contact.html
+++ b/contact.html
@@ -62,6 +62,7 @@
           <select name="sujet">
             <option value="">Sélection sujet/problème</option>
             <option value="partenariat">Partenariat</option>
+            <option value="partenariat">Vendre un produit</option>
             <option value="aide_logement">Aide au logement</option>
             <option value="autre">Autre question</option>
           </select>
@@ -99,6 +100,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
