--- a/services.html
+++ b/services.html
@@ -258,7 +258,7 @@
       <div id="achat-list" class="cards-container" style="margin-top:20px;">
     
         <div class="card">
-          <img src="micro-onde-blanc.jpeg">
+          <img src="micro-ondes-blanc.jpeg">
           <h3>Micro-ondes blanc</h3>
           <p>📍 Villejuif, Bd. Maxime Gorki</p>
           <p>État : Parfait</p>
@@ -286,7 +286,7 @@
         </div>
     
         <div class="card">
-          <img src="micro-onde-simple.jpeg">
+          <img src="micro-ondes-simple.jpeg">
           <h3>Micro-ondes Simple</h3>
           <p>📍 Saint-Denis / Pierrefitte</p>
           <p>État : Très bon, peu utilisé</p>
@@ -365,4 +365,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
