--- a/services.html
+++ b/services.html
@@ -295,7 +295,7 @@
         </div>
     
         <div class="card">
-          <img src=baskets-nike.jpeg">
+          <img src="baskets-nike.jpeg">
           <h3>Baskets Nike NOCTA HOT STEP 2</h3>
           <p>📍 Palaiseau (91120)</p>
           <p>Pointure : 42 — Neuf</p>
@@ -365,5 +365,6 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
