--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,6 @@
       <div class="title-underline"></div>
     </div>
   
-    <!-- Wrapper pour les deux colonnes -->
     <div class="contact-layout">
       <section class="contact-info">
         <h2>Infos</h2>
@@ -61,10 +60,14 @@
           <input type="email" name="email" placeholder="Email / Numéro de Tél." required>
           <select name="sujet">
             <option value="">Sélection sujet/problème</option>
-            <option value="partenariat">Partenariat</option>
+            <option value="aide_logement">Faire un don</option>
+            <option value="aide_logement">Bénéficier d'un don</option>
+            <option value="aide_logement">Proposer un logement</option>
+            <option value="aide_logement">Demande de logement</option>
             <option value="partenariat">Vendre un produit</option>
-            <option value="aide_logement">Aide au logement</option>
-            <option value="autre">Autre question</option>
+            <option value="partenariat">Acheter un produit</option>
+            <option value="partenariat">Partenariat</option>
+            <option value="autre">Autre</option>
           </select>
           <textarea name="details" placeholder="Détails de votre demande" rows="6" required></textarea>
           <button type="submit">Envoyer</button>
@@ -100,6 +103,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
