--- a/services.html
+++ b/services.html
@@ -34,7 +34,7 @@
     </div>
   </nav>
 
-  <div id="menu-overlay" class="menu-overlay" aria-hidden="true"></div>
+  <div id="menu-overlay" class="menu-overlay" a10094ria-hidden="true"></div>
 
   <main>
     <section class="don-section">
@@ -48,8 +48,8 @@
       </div>
 
       <div class="don-carousel-wrapper">
-        <button class="don-arrow left" id="leftArrow">&#10094;</button>
-        <button class="don-arrow right" id="rightArrow">&#10095;</button>
+        <button class="don-arrow left" id="leftArrow">&#8249;</button>
+        <button class="don-arrow right" id="rightArrow">&#8250;</button>
         
         <div class="don-carousel" id="donCarousel">
 
@@ -336,6 +336,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
