--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <h2>Ils témoignent :</h2>
       </div>
       <div class="carousel-container">
-        <button class="arrow left" id="prev">❮</button>
+        <button class="arrow left" id="prev">&#8249</button>
       
         <!-- Fenêtre qui masque les avis qui dépassent -->
         <div class="carousel-viewport">
@@ -131,7 +131,7 @@
             </div>
           </div>
         </div>
-        <button class="arrow right" id="next">❯</button>
+        <button class="arrow right" id="next">&#8250</button>
       </div>
     </section>
 
