--- a/index.html
+++ b/index.html
@@ -116,19 +116,30 @@
         <div class="carousel-viewport">
           <div class="carousel" id="carousel">
             <div class="avis">
-              <p>"Super plateforme, j’ai trouvé un logement en 3 jours !"</p>
-              <h4>— Clara, 21 ans</h4>
+              <p>"Grâce à Coin des Étudiants, j'ai trouvé une coloc en une semaine."</p>
+              <h4>Mamadou — Lyon</h4>
             </div>
       
             <div class="avis">
-              <p>"Enfin un service pensé pour les étudiants, simple et utile."</p>
-              <h4>— Mehdi, 19 ans</h4>
+              <p>"J'ai reçu un bureau et des vêtements, ça m'a énormément aidée."</p>
+              <h4>Claire — Lille</h4>
+            </div>
+
+            <div class="avis">
+              <p>"J'étais sur le point de dormir dehors, une annonce m'a sauvé."</p>
+              <h4>Fatoumata — Paris 8"</h4>
+            </div>
+
+            <div class="avis">
+              <p>"Un costume donné via le canal m'a permis d'assurer mon entretien."</p>
+              <h4>Julien — Rennes</h4>
+            </div>
+
+            <div class="avis">
+              <p>"Une chambre trouvée à Villeneuve-Saint-Georges m'a stabilisée."</p>
+              <h4>Aïssatou — Etudiante Internationale</h4>
             </div>
       
-            <div class="avis">
-              <p>"J’ai pu donner mes anciens cours facilement, merci !"</p>
-              <h4>— Léa, 22 ans</h4>
-            </div>
           </div>
         </div>
       </div>
