--- a/index.html
+++ b/index.html
@@ -118,28 +118,42 @@
             <div class="avis">
               <p>"Grâce à Coin des Étudiants, j'ai trouvé une coloc en une semaine."</p>
               <h4>Mamadou — Lyon</h4>
+              <div class="stars">
+                <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+              </div>
             </div>
       
             <div class="avis">
               <p>"J'ai reçu un bureau et des vêtements, ça m'a énormément aidée."</p>
               <h4>Claire — Lille</h4>
+              <div class="stars">
+                <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+              </div>
             </div>
 
             <div class="avis">
               <p>"J'étais sur le point de dormir dehors, une annonce m'a sauvé."</p>
               <h4>Fatoumata — Paris 8"</h4>
+              <div class="stars">
+                <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+              </div>
             </div>
 
             <div class="avis">
               <p>"Un costume donné via le canal m'a permis d'assurer mon entretien."</p>
               <h4>Julien — Rennes</h4>
+              <div class="stars">
+                <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+              </div>
             </div>
 
             <div class="avis">
               <p>"Une chambre trouvée à Villeneuve-Saint-Georges m'a stabilisée."</p>
               <h4>Aïssatou — Etudiante Internationale</h4>
+              <div class="stars">
+                <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+              </div>
             </div>
-      
           </div>
         </div>
       </div>
