--- a/services.html
+++ b/services.html
@@ -354,8 +354,8 @@
 
           <div class="logement-card">
             <img src="logement-nanterre.jpeg" alt="Nanterre">
-            <h3>Chambre Meublée – Île-de-France, Nanterre (92000) · Quartier Vieux Pont</h3>
-            <p class="localisation">📍 Nanterre</p>
+            <h3>Chambre Meublée – Nanterre</h3>
+            <p class="localisation">📍 Île-de-France, Nanterre (92000) · Quartier Vieux Pont<p>
             <p class="hidden-info">🛏️ Chambre meublée – APL possible – 575 € / mois
             <br>Chambre à louer dans un logement totalement meublé et équipé, idéalement situé près de La Défense.
             <br>➡️ Deux chambres disponibles.
@@ -374,7 +374,6 @@
             <br>🔹 Transports :
             <br>	•	Bus au pied de l’immeuble
             <br>	•	Proche RER A
-            <br>	•	Accès futur Métro 15
             <br>
             <br>📞 Contact : 07 58 53 02 61t</p>
           </div>
@@ -588,6 +587,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
