--- a/services.html
+++ b/services.html
@@ -356,8 +356,7 @@
             <img src="logement-nanterre.jpeg" alt="Nanterre">
             <h3>Chambre Meublée – Nanterre</h3>
             <p class="localisation">📍 Île-de-France, Nanterre (92000) · Quartier Vieux Pont<p>
-            <p class="hidden-info">🛏️ Chambre meublée – APL possible – 575 € / mois
-            <br>Chambre à louer dans un logement totalement meublé et équipé, idéalement situé près de La Défense.
+            <p class="hidden-info">🛏️ Chambre meublée à louer dans un logement totalement meublé et équipé, <br> idéalement situé près de La Défense. – 575 € / mois
             <br>➡️ Deux chambres disponibles.
             <br>
             <br>🔹 Parties communes :
@@ -587,6 +586,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
