--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
   
       <div class="footer-section">
         <h3>Contact</h3>
-        <p>Email : contact@coindesetudiants.fr</p>
+        <p>Email : coindetudiants@gmail.com</p>
       </div>
     </div>
     
