--- a/partenariats.html
+++ b/partenariats.html
@@ -98,7 +98,7 @@
   
       <div class="footer-section">
         <h3>Contact</h3>
-        <p>Email : contact@coindesetudiants.fr</p>
+        <p>Email : coindetudiants@gmail.com</p>
       </div>
     </div>
     
@@ -109,6 +109,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
