--- a/services.html
+++ b/services.html
@@ -547,7 +547,7 @@
 
       <div class="footer-section">
         <h3>Contact</h3>
-        <p>Email : contact@coindesetudiants.fr</p>
+        <p>Email : coindetudiants@gmail.com</p>
       </div>
     </div>
     
@@ -582,6 +582,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
