--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
       </div>
       <div class="cartes">
         <div class="carte1">
-          <span class="compteur" data-target="+2900">0</span>
+          <span class="compteur" data-target="2900">0</span>
           <span>Étudiants inscrits</span>
         </div>
         <div class="carte2">
-          <span class="compteur" data-target="+500">0</span>
+          <span class="compteur" data-target="500">0</span>
           <span>Logements proposés</span>
         </div>
         <div class="carte3">
-          <span class="compteur" data-target="+1700">0</span>
+          <span class="compteur" data-target="1700">0</span>
           <span>Dons réalisés</span>
         </div>
       </div>
