--- a/services.html
+++ b/services.html
@@ -156,7 +156,7 @@
                data-image="logement-caen.jpeg"
                data-title="Chambre mezzanine – Caen (St Paul)"
                data-localisation="Normandie, Caen (14000)"
-               data-description="🛏️ Chambre étudiante meublée 17 m² + mezzanine 7 m².<br>💻 Wifi fibre, salle de bain privée, linge fourni, accès cuisine, jardin.<br>🚍 Proche bus 1,3,6,21.<br><br>💶 450 € / mois.<br>📞 Contact : 06 76 97 97 25."
+               data-description="🛏️ Chambre étudiante meublée 17 m² + mezzanine 7 m².<br>💻 Wifi fibre, salle de bain privée, linge fourni, accès cuisine, jardin.<br>🚍 Proche bus 1,3,6,21.<br><br>💶 450 € / mois."
                data-contact="06 76 97 97 25">
             <img src="logement-caen.jpeg" alt="Caen">
             <h3>Chambre mezzanine – Caen (St Paul)</h3>
@@ -167,7 +167,7 @@
                data-image="logement-palaiseau.jpeg"
                data-title="Chambre en sous-location – Palaiseau"
                data-localisation="Palaiseau (91120)"
-               data-description="🏠 Chambre à sous-louer dans logement familial.<br>💶 300 €/mois toutes charges comprises.<br>❌ Non éligible APL.<br>⚡ Sans caution.<br><br>📞 Contact : 07 51 28 10 28."
+               data-description="🏠 Chambre à sous-louer dans logement familial.<br>💶 300 €/mois toutes charges comprises.<br>❌ Non éligible APL.<br>⚡ Sans caution."
                data-contact="07 51 28 10 28">
             <img src="logement-palaiseau.jpeg" alt="Palaiseau">
             <h3>Chambre en sous-location – Palaiseau</h3>
@@ -430,6 +430,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
