--- a/services.html
+++ b/services.html
@@ -178,7 +178,7 @@
                data-image="logement-savigny.jpeg"
                data-title="Chambre meublée – Savigny-sur-Orge"
                data-localisation="Savigny-sur-Orge (91600)"
-               data-description="Chambre meublée proche RER C.<br>💶 495 €/mois CC.<br>📞 Contact : 06 76 87 10 80."
+               data-description="Chambre meublée proche RER C.<br>💶 495 €/mois CC."
                data-contact="06 76 87 10 80">
             <img src="logement-savigny.jpeg" alt="Savigny-sur-Orge">
             <h3>Chambre meublée – Savigny-sur-Orge</h3>
@@ -189,7 +189,7 @@
                data-image="logement-marseille.jpeg"
                data-title="Appartement T1 – Marseille"
                data-localisation="Marseille (13015)"
-               data-description="Appartement T1 avec salle de bain et cuisine équipée.<br>💶 450 € CC / mois.<br>📅 Libre immédiatement.<br>📞 Alessia : 06 46 82 22 95."
+               data-description="Appartement T1 avec salle de bain et cuisine équipée.<br>💶 450 € CC / mois.<br>📅 Libre immédiatement."
                data-contact="06 46 82 22 95">
             <img src="logement-marseille.jpeg" alt="Marseille">
             <h3>Appartement T1 – Marseille</h3>
@@ -200,7 +200,7 @@
                data-image="logement-aulnay.jpeg"
                data-title="Dépannage logement étudiant – Aulnay-sous-Bois"
                data-localisation="Aulnay-sous-Bois (93600)"
-               data-description="Solution provisoire étudiante, femme uniquement.<br>💶 650 €/mois.<br>Machine à laver, douche dans pièce, frigo.<br><br>📞 Contact : 06 14 75 75 77."
+               data-description="Solution provisoire étudiante, femme uniquement.<br>💶 650 €/mois.<br>Machine à laver, douche dans pièce, frigo."
                data-contact="06 14 75 75 77">
             <img src="logement-aulnay.jpeg" alt="Aulnay-sous-Bois">
             <h3>Dépannage logement étudiant – Aulnay-sous-Bois</h3>
@@ -211,7 +211,7 @@
                data-image="logement-melun.jpeg"
                data-title="Studio non meublé – Melun"
                data-localisation="Melun (77000)"
-               data-description="Studio 22 m² refait à neuf.<br>💶 550 € CC / mois.<br>Parking privé, cuisine équipée.<br><br>📞 Contact : 06 83 52 49 94."
+               data-description="Studio 22 m² refait à neuf.<br>💶 550 € CC / mois.<br>Parking privé, cuisine équipée."
                data-contact="06 83 52 49 94">
             <img src="logement-melun.jpeg" alt="Melun">
             <h3>Studio non meublé – Melun</h3>
@@ -222,7 +222,7 @@
                data-image="logement-choisy.jpeg"
                data-title="Studio – Choisy-le-Roi"
                data-localisation="Choisy-le-Roi (94600)"
-               data-description="Studio 12 m² refait à neuf.<br>Électricité + eau incluses.<br>💶 590 € CC / mois.<br><br>📞 Contact : 06 52 73 27 32."
+               data-description="Studio 12 m² refait à neuf.<br>Électricité + eau incluses.<br>💶 590 € CC / mois."
                data-contact="06 52 73 27 32">
             <img src="logement-choisy.jpeg" alt="Choisy-le-Roi">
             <h3>Studio – Choisy-le-Roi</h3>
@@ -233,7 +233,7 @@
                data-image="logement-stgermain.jpeg"
                data-title="Studette meublée – Saint-Germain-en-Laye"
                data-localisation="Saint-Germain-en-Laye (78100)"
-               data-description="Studette meublée 10 m².<br>💶 590 €/mois.<br>Chauffage sol + électricité inclus.<br><br>📞 Contact : 07 49 00 66 17."
+               data-description="Studette meublée 10 m².<br>💶 590 €/mois.<br>Chauffage sol + électricité inclus."
                data-contact="07 49 00 66 17">
             <img src="logement-stgermain.jpeg" alt="Saint-Germain-en-Laye">
             <h3>Studette meublée – Saint-Germain-en-Laye</h3>
@@ -244,7 +244,7 @@
                data-image="logement-nanterre.jpeg"
                data-title="Chambre Meublée – Nanterre"
                data-localisation="Nanterre (92000)"
-               data-description="Chambre meublée proche La Défense.<br>575–600 €/mois.<br>Garantie Visale / GarantMe obligatoire.<br><br>📞 Contact : 07 58 53 02 61."
+               data-description="Chambre meublée proche La Défense.<br>575–600 €/mois.<br>Garantie Visale / GarantMe obligatoire."
                data-contact="07 58 53 02 61">
             <img src="logement-nanterre.jpeg" alt="Nanterre">
             <h3>Chambre Meublée – Nanterre</h3>
@@ -255,7 +255,7 @@
                data-image="logement-toulouse.jpeg"
                data-title="T1 bis – Toulouse"
                data-localisation="Toulouse (31000)"
-               data-description="T1 Bis 31 m², lumineux, balcon plein sud.<br>💶 565 € CC / mois.<br><br>📞 Contact : 06 26 26 53 63."
+               data-description="T1 Bis 31 m², lumineux, balcon plein sud.<br>💶 565 € CC / mois."
                data-contact="06 26 26 53 63">
             <img src="logement-toulouse.jpeg" alt="Toulouse">
             <h3>T1 bis – Toulouse</h3>
@@ -266,7 +266,7 @@
                data-image="logement-cergy2.jpeg"
                data-title="Chambre meublée standing – Cergy"
                data-localisation="Cergy (95000)"
-               data-description="Colocation haut de gamme, appartement refait à neuf.<br>🛁 2 salles de bain.<br>🌿 Terrasse 40 m².<br>💶 600 €/mois CC.<br><br>📞 Contact : 06 01 79 89 98."
+               data-description="Colocation haut de gamme, appartement refait à neuf.<br>🛁 2 salles de bain.<br>🌿 Terrasse 40 m².<br>💶 600 €/mois CC."
                data-contact="06 01 79 89 98">
             <img src="logement-cergy2.jpeg" alt="Cergy">
             <h3>Chambre meublée standing – Cergy</h3>
@@ -277,7 +277,7 @@
                data-image="logement-st-germain.jpeg"
                data-title="Chambre de service – Saint-Germain-en-Laye"
                data-localisation="Saint-Germain-en-Laye (78100)"
-               data-description="Chambre de service 12 m² refaite à neuf.<br>💶 580 € CC.<br>📞 Contact : 06 60 06 91 32."
+               data-description="Chambre de service 12 m² refaite à neuf.<br>💶 580 € CC."
                data-contact="06 60 06 91 32">
             <img src="logement-st-germain.jpeg" alt="Saint-Germain-en-Laye">
             <h3>Chambre de service – Saint-Germain-en-Laye</h3>
@@ -430,6 +430,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
