--- a/services.html
+++ b/services.html
@@ -145,7 +145,21 @@
                data-image="logement-cergy.jpeg"
                data-title="Studio meublé – Cergy Saint-Christophe"
                data-localisation="Île-de-France, Cergy Saint-Christophe (95800)"
-               data-description="🏡 Studio rénové et meublé de 17 m², idéal étudiant ou jeune actif.<br><br>🔑 Composition : salle d’eau, pièce principale avec cuisine équipée, chauffage électrique.<br><br>🚇 10 min à pied du RER A et train L.<br>💶 Loyer : 600 €/mois.<br>🔐 Dépôt : 530 €.<br>📄 Garantie Visale obligatoire."
+               data-description="🏡 Studio rénové et meublé de 17 m², idéal étudiant ou jeune actif.
+
+            <br>🔑 Composition :
+            <br>Salle d’eau (douche, lavabo, WC)
+            <br>Pièce principale avec coin cuisine équipé
+            <br>Chauffage électrique, double vitrage
+            
+            <br>🚇 Localisation :
+            <br>10 min à pied du RER A – Cergy Saint-Christophe et train L (Paris Saint-Lazare)
+            <br>Commerces à proximité immédiate
+            <br>Accès direct à la base de loisirs de Cergy
+            
+            <br>💶 Loyer : 600 €/mois (530 € + 70 € charges forfaitaires)
+            <br>🔐 Dépôt de garantie : 530 €
+            <br>📄 Garantie Visale obligatoire"
                data-contact="06 19 30 59 44">
             <img src="logement-cergy.jpeg" alt="Cergy">
             <h3>Studio meublé – Cergy Saint-Christophe</h3>
@@ -430,6 +444,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
