--- a/services.html
+++ b/services.html
@@ -153,8 +153,9 @@
             <br>Chauffage électrique, double vitrage
             <br>
             <br>🚇 Localisation :
-            <br> – 10 min à pied du RER A et train L 
-            <br> – Accès direct à la base de loisirs de Cergy
+            <br>10 min à pied du RER A et train L 
+            <br>Accès direct à la base de loisirs de Cergy
+            <br>
             <br>💶 Loyer : 600 €/mois (530 € + 70 € charges forfaitaires)
             <br>🔐 Dépôt de garantie : 530 €
             <br>📄 Garantie Visale obligatoire"
@@ -578,6 +579,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
