--- a/services.html
+++ b/services.html
@@ -267,9 +267,7 @@
             <br>Place de parking privative incluse.
             <br>
             <br>🔹 Le logement comprend :
-            <br>	•	Séjour lumineux avec placard aménagé
             <br>	•	Cuisine équipée : plaques 2 feux + rangements
-            <br>	•	Salle de bain avec douche, meuble vasque, WC
             <br>	•	Installation pour machine à laver
             <br>	•	Chauffage électrique individuel (non inclus)
             <br>	•	Eau chaude individuelle
@@ -374,7 +372,7 @@
             <br>	•	Entrée avec salle de bains et WC indépendants
             <br>	•	Pièce à vivre lumineuse avec baie vitrée (double vitrage récent)
             <br>	•	Balcon exposé plein sud
-            <br>	•	Cuisine ouverte équipée : cuisinière avec four, micro-ondes, frigo, lave-linge, placards
+            <br>	•	Cuisine ouverte équipée : cuisinière, four, micro-ondes, frigo, lave-linge...
             <br>	•	Rangements importants (placards)
             <br>	•	Chauffage individuel gaz
             <br>	•	Cave privative
@@ -579,6 +577,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
