--- a/services.html
+++ b/services.html
@@ -392,9 +392,10 @@
                data-localisation="Cergy (95000)"
                data-description="🏡 Chambre meublée standing – 12 m² – 600 € CC / mois
             <br>Colocation haut de gamme dans un appartement entièrement refait à neuf, calme et sécurisé.
-            <br>Séjour lumineux avec grand canapé d’angle + écran connecté. Cuisine ouverte totalement équipée.
+            <br>Séjour lumineux avec grand canapé d’angle + écran connecté. 
+            <br>Cuisine ouverte totalement équipée.
             <br>🛁 2 salles de bain modernes avec grandes douches, serviettes fournies.
-            <br>🛏️ 5 chambres décorées, certaines avec bureau et fauteuil. Lits avec parures fournies.
+            <br>🛏️ 5 chambres, certaines avec bureau et fauteuil. Lits avec parures fournies.
             <br>🌿 Terrasse de 40 m² aménagée.
             <br>
             <br>Électricité, eau, internet inclus.
@@ -577,6 +578,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
