--- a/partenariats.html
+++ b/partenariats.html
@@ -75,7 +75,7 @@
   </div>
 
   <div class="big-button-container">
-    <a href="https://sae-projet.github.io/Site-SAE/contact.html" class="big-button">Formulaire</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxFWhEgEM0nuMQ1LxaQ293BqxbW6cxz4bv4Nd62cu1i846mQ/viewform?usp=header" class="big-button">Formulaire</a>
   </div>
   <div class="texte">
     <p>Le Coin Des Étudiants connecte les étudiants aux meilleures opportunités pour réussir et s’épanouir. En rejoignant notre projet, vous contribuez à un impact réel sur leur avenir tout en valorisant votre engagement. Ensemble, construisons des solutions innovantes et durables pour la jeunesse.</p>
@@ -109,6 +109,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
