--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
       <div class="cartes">
         <div class="carte1">
-          <span class="compteur" data-target="2900">0</span>
+          <span class="compteur" data-target="5000">0</span>
           <span>Étudiants inscrits</span>
         </div>
         <div class="carte2">
@@ -72,8 +72,12 @@
           <span>Logements proposés</span>
         </div>
         <div class="carte3">
-          <span class="compteur" data-target="1700">0</span>
+          <span class="compteur" data-target="150">0</span>
           <span>Dons réalisés</span>
+        </div>
+        <div class="carte4">
+          <span class="compteur" data-target="70">0</span>
+          <span>Achats et Ventes effectués</span>
         </div>
       </div>
     </section>
@@ -117,7 +121,7 @@
           <div class="carousel" id="carousel">
             <div class="avis">
               <p>"Grâce à Coin des Étudiants, j'ai trouvé une coloc en une semaine."</p>
-              <h4>Mamadou — Lyon</h4>
+              <h4>Thomas — Lyon</h4>
               <div class="stars">
                 <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
               </div>
