--- a/partenariats.html
+++ b/partenariats.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Le Coin Des Étudiants</title>
+  <title>Coin Des Étudiants</title>
   <link rel="stylesheet" href="partenariats.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
 
     <ul class="nav-links" id="nav-links">
       <li class="menu-header">
-        <span>Le Coin Des Étudiants</span>
+        <span>Coin Des Étudiants</span>
       </li>
       <li><a href="index.html">Accueil</a></li>
       <li><a href="services.html">Services</a></li>
@@ -109,6 +109,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
