--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Le Coin Des Étudiants</title>
+  <title>Coin Des Étudiants</title>
   <link rel="stylesheet" href="services.css">
 </head>
 
@@ -13,7 +13,7 @@
 
     <div class="logo">
       <img src="logo.png" alt="Logo">
-      <span>Le Coin Des Étudiants</span>
+      <span>Coin Des Étudiants</span>
     </div>
 
     <ul class="nav-links" id="nav-links">
@@ -578,6 +578,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
