--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <title>Le Coin Des Étudiants</title>
+  <title>Coin Des Étudiants</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,11 +14,11 @@
 
     <div class="logo">
       <img src="logo.png" alt="Logo">
-      <span>Le Coin Des Étudiants</span>
+      <span>Coin Des Étudiants</span>
     </div>
     <ul class="nav-links" id="nav-links">
       <li class="menu-header">
-        <span>Le Coin Des Étudiants</span>
+        <span>Coin Des Étudiants</span>
       </li>
       <li><a href="index.html" class="active">Accueil</a></li>
       <li><a href="services.html">Services</a></li>
