--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <section class="chiffres">
       <div class="titre-chiffre">
-        <h2>Nos Chiffres</h2>
+        <h2>Pourquoi nous faire confiance ? <br>En 3 mois :</h2>
       </div>
       <div class="cartes">
         <div class="carte1">
