--- a/partenariats.html
+++ b/partenariats.html
@@ -14,7 +14,7 @@
 
     <div class="logo">
       <img src="logo.png" alt="Logo">
-      <span>Le Coin Des Étudiants</span>
+      <span>Coin Des Étudiants</span>
     </div>
 
     <ul class="nav-links" id="nav-links">
@@ -109,6 +109,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
