--- a/apropos.html
+++ b/apropos.html
@@ -48,7 +48,7 @@
       </div>
       <div class="text-part1">
         <p>
-          🧩 <strong>L’histoire de Coin des Étudiants</strong><br>
+          <strong>L’histoire de Coin des Étudiants</strong><br>
           Être étudiant en France, c’est souvent devoir faire face à de nombreux défis : trouver un logement, s’équiper à petit prix, accéder à des services abordables ou simplement bénéficier d’un peu de solidarité. Nous avons tous connu ces moments où chaque euro compte, où il faut improviser pour s’en sortir.
           En observant notre quotidien, nous avons remarqué que tous les services utiles aux étudiants étaient dispersés : ici une plateforme de dons, là une pour la colocation, ailleurs une autre pour les bons plans. Aucune ne rassemblait tous ces besoins essentiels au même endroit, spécifiquement pour les étudiants.
           Les plateformes généralistes comme Leboncoin offrent des solutions, mais elles restent souvent inaccessibles aux budgets étudiants : prix trop élevés, offres inadaptées, risques d’arnaques ou frais d’agence abusifs pour les logements. Nous voulions créer une alternative étudiante, simple, fiable et solidaire.
@@ -149,6 +149,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
