--- a/services.html
+++ b/services.html
@@ -515,13 +515,8 @@
       
       <div class="cta-container">
         <div class="cta-card">
-          <p>Vous souhaitez vendre un article ?</p>
-          <button onclick="window.location.href='contact.html?type=Vendre%20un%20produit'">Accéder →</button>
-        </div>
-    
-        <div class="cta-card">
-          <p>Vous souhaitez acheter un article ?</p>
-          <button onclick="window.location.href='contact.html?type=Acheter%20un%20produit'">Accéder →</button>
+          <p>Vous souhaitez proposer un service ? <br> Inscrivez vous sur ce formulaire :</p>
+          <button onclick="window.location.href='https://forms.gle/Yvq2QRsxqzBq8SHD7">Accéder →</button>
         </div>
       </div>
     </section>
@@ -578,6 +573,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
