--- a/services.html
+++ b/services.html
@@ -516,7 +516,7 @@
       <div class="cta-container">
         <div class="cta-card">
           <p>Vous souhaitez proposer un service ? <br> Inscrivez vous sur ce formulaire :</p>
-          <button onclick="window.location.href='https://forms.gle/Yvq2QRsxqzBq8SHD7">Accéder →</button>
+          <button href="https://forms.gle/Yvq2QRsxqzBq8SHD7">Accéder →</button>
         </div>
       </div>
     </section>
@@ -573,6 +573,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
