--- a/services.html
+++ b/services.html
@@ -37,16 +37,13 @@
   <div id="menu-overlay" class="menu-overlay" aria-hidden="true"></div>
 
   <main>
+    <div class="page-title">
+      <h1>Nos derniers services :</h1>
+      <div class="title-underline"></div>
+    </div>
+    
     <section class="don-section">
       <h2>Dons Étudiants</h2>
-
-      <div class="search-filter">
-        <input type="text" placeholder="Rechercher..." class="search-bar">
-        <select class="filter-select">
-          <option value="">Filtrer</option>
-        </select>
-      </div>
-
       <div class="don-carousel-wrapper">
         <button class="don-arrow left" id="leftArrow">&#8249;</button>
         <button class="don-arrow right" id="rightArrow">&#8250;</button>
@@ -573,6 +570,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
