--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       </div>
     
       <div class="commu-cta">
-        <button class="btn-logement">Proposer un logement</button>
+        <button href="https://forms.gle/Yvq2QRsxqzBq8SHD7" class="btn-logement">Proposer un service</button>
       </div>
     
       <p class="commu-stats">+3 500 étudiants déjà membres</p>
